k8s/kustomize/arr/base/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media-server
spec:
  selector:
    app: prowlarr
  ports:
  - protocol: TCP
    port: 9696
    targetPort: 9696
  type: ClusterIP
